# django-models

./: .gitignore  README.md  db.sqlite3  pyproject.toml
snack_tracker_project/: settings.py
snacks/: models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py  0002_auto_20210618_1718.py
snacks/templates/: base.html  home.html  snacks_detail.html  snacks_details.html  snacks_list.html
