[tool.poetry]
name = "django-models"
version = "0.1.0"
description = ""
authors = ["abdalazez <abdalazzezzalsalahat@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
pytest = "^6.2.4"
black = "^21.6b0"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
